insert isNan and modified html and css

--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,3 @@
 .cursor_pointer     {cursor: pointer;}
 .width_input        {width: 185px !important;}
+.bg_color_red       {background-color:#b20000;}
